bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: doc-ai
    labels:
        com.docker.compose.project: doc-ai
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: doc-ai
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: doc-ai
                com.docker.compose.service: backend
                com.docker.compose.network.docai_network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: docai-backend
                  image: doc-ai-backend
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://localhost:8000/api/health']
                    periodSeconds: 30
                    initialDelaySeconds: 40
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: backend-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app
                      mountPath: /app
                      readOnly: true
            volumes:
                - name: app
                  hostPath:
                    path: C:\Users\krish\OneDrive\Documents\doc-ai
                  readOnly: true
