bridge/base/postgres-deployment.yaml
#! postgres-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
    namespace: doc-ai
    labels:
        com.docker.compose.project: doc-ai
        com.docker.compose.service: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: doc-ai
            com.docker.compose.service: postgres
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: doc-ai
                com.docker.compose.service: postgres
                com.docker.compose.network.docai_network: "true"
        spec:
            containers:
                - name: docai-postgres
                  image: postgres:15-alpine
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - pg_isready -U postgres -d hospital
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: postgres-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
                    - name: docker-entrypoint-initdb-d-01-schema-sql
                      mountPath: /docker-entrypoint-initdb.d/01-schema.sql
                      readOnly: true
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: postgres-postgres-data
                - name: docker-entrypoint-initdb-d-01-schema-sql
                  hostPath:
                    path: C:\Users\krish\OneDrive\Documents\doc-ai\schema.sql
                  readOnly: true
