bridge/base/frontend-expose.yaml
#! frontend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: doc-ai
    labels:
        com.docker.compose.project: doc-ai
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: doc-ai
        com.docker.compose.service: frontend
    ports:
        - name: frontend-5500
          port: 5500
          targetPort: frontend-5500
