bridge/base/docai_network-network-policy.yaml
#! docai_network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: docai-network-network-policy
    namespace: doc-ai
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.docai_network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.docai_network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.docai_network: "true"
